<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.RegisterActivity"
    tools:ignore="MissingClass">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/label_sign_up"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorText"
            android:background="@color/colorTextBackground"
            android:padding="12dp"
            android:inputType="text"
            android:hint="@string/enter_name"
            android:id="@+id/etName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorText"
            android:background="@color/colorTextBackground"
            android:padding="12dp"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:id="@+id/etEmail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorText"
            android:background="@color/colorTextBackground"
            android:padding="12dp"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:id="@+id/etPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorText"
            android:background="@color/colorTextBackground"
            android:padding="12dp"
            android:inputType="textPassword"
            android:hint="@string/enter_confirm_password"
            android:id="@+id/etConfirmPassword" />


        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_margin="15dp"
            android:textColor="@color/colorAccent"
            android:text="@string/label_sign_up"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            android:text="Sign In"/>

    </LinearLayout>




